# Libtorch_example_2

./: CMakeLists.txt  README.md  main.cxx
include/: DataStorage.hh  MyDataset.hh
